<resources>
    <string name="app_name">BadenBadenCasinoRoulette</string>
    <string name="play">Play</string>
    <string name="info_title">Privacy Policy</string>
    <string name="info_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
        in lectus pellentesque, ullamcorper arcu quis, rutrum purus. Nullam orci mi, efficitur
        scelerisque nisi quis, aliquet tristique mauris. Donec bibendum, neque sed lacinia cursus,
        nisi dolor pharetra metus, ut lacinia nibh sapien nec lacus. Pellentesque nunc erat,
        euismod in tincidunt sit amet, tincidunt eu purus. Vivamus a urna enim. Morbi non purus at
        enim cursus sagittis. Mauris eu tortor feugiat, efficitur nunc ultrices, blandit ex. Donec
        consequat commodo justo quis facilisis.
        \n
        Vivamus vitae rutrum nulla. Aliquam in dolor in neque finibus varius. Pellentesque ligula
        nisi, tempus ac semper ac, lobortis in tortor. Phasellus nisl nibh, congue et tellus non,
        hendrerit malesuada dui. Proin id ligula non nibh ultrices feugiat. Maecenas faucibus diam
        vel orci molestie, ut maximus odio tincidunt. Integer quis fringilla enim, fermentum
        malesuada metus. Cras dolor felis, imperdiet a nisl in, dapibus fringilla urna. Proin
        tincidunt, turpis at malesuada faucibus, risus ligula suscipit justo, aliquam aliquam nunc
        nisl quis tortor. Phasellus eget lectus sollicitudin, viverra sem at, bibendum elit.
        Vivamus varius risus et lobortis blandit. Quisque a accumsan lectus. Etiam eget purus nec
        erat viverra molestie. Nullam rhoncus dolor felis, et pulvinar enim varius condimentum.
        \n
        Fusce fringilla leo enim, in convallis ligula malesuada ullamcorper. Curabitur massa mi,
        bibendum ut feugiat a, accumsan scelerisque neque. Nunc urna arcu, gravida ac dictum a,
        scelerisque eu quam. Vestibulum semper, augue id iaculis finibus, felis felis faucibus sem,
        quis placerat nisl erat eget est. Vestibulum non est eget lacus fermentum faucibus
        tristique non nibh. Nullam malesuada dui justo, et vulputate justo cursus in. Duis porta
        tortor nec tincidunt interdum. Phasellus lacus augue, iaculis vitae rutrum nec, dignissim
        tempor sem. Vestibulum eget ex vitae turpis blandit bibendum cursus eu lacus. Donec
        porttitor convallis eleifend. Interdum et malesuada fames ac ante ipsum primis in faucibus.
        \n
        Nulla pulvinar lobortis nisi, id tempus enim volutpat id. Sed maximus consectetur tortor,
        eu ultrices lectus viverra eu. Curabitur malesuada egestas accumsan. Etiam feugiat
        fermentum venenatis. In pellentesque in lorem et fringilla. Fusce blandit hendrerit nibh,
        ac ullamcorper nulla. Donec et mi non tellus mattis iaculis. Vivamus venenatis luctus arcu.
        Aliquam mattis lorem sit amet mi pretium tristique.
        \n
        Quisque molestie eros odio, nec laoreet ex lacinia ac. Vestibulum ante ipsum primis in
        faucibus orci luctus et ultrices posuere cubilia curae; Praesent id consectetur nunc.
        Curabitur vitae nunc leo. Suspendisse ornare mattis lacus non imperdiet. Praesent sed
        lobortis lorem, ac rutrum magna. Mauris nec convallis lacus. Curabitur interdum sagittis
        efficitur. Mauris lobortis enim pharetra mollis dapibus.
    </string>
    <string name="win">Win:</string>
    <string name="bank">Bank:</string>
    <string name="bet">Bet:</string>
    <string name="gold_text_tag">gold_text</string>
</resources>